branches/0.3/objects/ProjectRisk__c.object
<CustomObject>
    <description>ProjectRIsk</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Undefined1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateClosed__c</fullName>
        <description>DateClosed</description>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateDue__c</fullName>
        <description>DateDue</description>
        <label>DateDue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateOpened__c</fullName>
        <description>DateOpened</description>
        <label>Date Opened</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysImpact__c</fullName>
        <description>DaysImpact</description>
        <label>Days Impact</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImpactDescription__c</fullName>
        <description>ImpactDescription</description>
        <label>Impact Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MitigationPlan__c</fullName>
        <description>MitigationPlan</description>
        <label>Mitigation Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Probability</description>
        <label>Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <description>ProjectTask</description>
        <label>Project Task</label>
        <referenceTo>ProjectTask__c</referenceTo>
        <relationshipLabel>Project Risk</relationshipLabel>
        <relationshipName>PrijectsRisks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project</description>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipName>PrijectsRisks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Risk</label>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Risk</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>